started simplifying intellij gradle scripts
Renamed xtext.idea.tests to xtext.idea.unit. It was not a test project,
but a library used by test projects. After this renaming, the convention
"ends with 'tests' => test project" finally holds everywhere.

Eclipse project layout now automatically adjusts itself if a projects is
a test project.