@@ -5,8 +5,8 @@ buildscript {
 }
 
 def eclipsePluginProjects = subprojects.findAll{it.file('build.properties').exists()}
-def ideaPluginProjects = subprojects.findAll{it.file('META-INF/plugin.xml').exists() && ! it.name.endsWith('tests')} + project('org.eclipse.xtext.idea.common.types.tests')
-def ideaTestProjects = subprojects.findAll{it.name.endsWith('idea.tests')} + project('org.eclipse.xtext.idea.common.types.tests') - project('org.eclipse.xtext.idea.tests')
+def ideaTestProjects = subprojects.findAll{it.name.endsWith('tests')} - eclipsePluginProjects
+def ideaPluginProjects = subprojects.findAll{it.file('META-INF/plugin.xml').exists()} - ideaTestProjects
 
 apply plugin: 'org.xtext.idea-repository'
 apply plugin: 'org.xtext.idea-aggregator'
@@ -16,25 +16,19 @@ if (version.endsWith("-SNAPSHOT")) {
 } else {
 	ideaRepository.rootUrl = "http://download.eclipse.org/modeling/tmf/xtext/idea/${version}"
 }
-ideaRepository.exclude '**/*entities*/**', '**/*sdomain*/**', '**/*purexbase*/**', '**/*testlanguages*/**', '**/*common.types.tests*/**'
-
-runIdea {
-	jvmArgs '-ea'
-}
-
-allprojects {
-	apply plugin: 'org.xtext.idea-dev'
-
-	ideaDevelopment {
-		ideaVersion = "143.249.6"
-		pluginDependencies {
-			id 'junit'
-		}
-	}
-}
+ideaRepository.exclude '**/*entities*/**', '**/*sdomain*/**', '**/*purexbase*/**', '**/*testlanguages*/**'
 
 configure(eclipsePluginProjects) {
 	apply from: "${rootDir}/gradle/eclipse-plugin-project.gradle"
+}
+
+configure(allprojects - eclipsePluginProjects) {
+	apply from: "$rootDir/gradle/intellij-development.gradle"
+	
+	//TODO move to a script
+	tasks.withType(org.xtext.gradle.idea.tasks.RunIdea) {
+		jvmArgs '-ea'
+	}
 }
 
 configure(subprojects - eclipsePluginProjects) {
@@ -49,37 +43,18 @@ configure(subprojects - eclipsePluginProjects) {
 
 configure(ideaPluginProjects + ideaTestProjects) {
 	configurations.compile {
+		//TODO this doesn't seem right, why do we suddenly exclude it here when we use it everywhere else?
 		exclude group: 'org.eclipse.equinox', module: 'common'
 
 		if( project.name != 'org.eclipse.xtend.idea') {
+			//TODO why exclude it everywhere but Xtend? Does it hurt somewhere else?
 			exclude module:'org.eclipse.jdt.core'
 		}
-	}
-
-	task cleanTestSystem(type: Delete) {
-		delete "${ideaDevelopment.ideaHome}/test-system"
 	}
 }
 
 configure(ideaPluginProjects) {
 	apply plugin: 'org.xtext.idea-plugin'
-}
-
-configure(ideaTestProjects) {
-	sourceSets.test.java.srcDirs ('src', 'src-gen', 'xtend-gen', 'tests')
-	sourceSets.main.java.srcDirs = []
-
-	dependencies {
-		testCompile project(':intellij:org.eclipse.xtext.idea.tests')
-	}
-
-	test {
-		minHeapSize = "1024m"
-		systemProperty 'idea.system.path', "${project.buildDir}/idea-test-system"
-		systemProperty 'idea.config.path', "${project.buildDir}/idea-test-config"
-		jvmArgs '-XX:MaxPermSize=256m'
-		exclude {it.name.endsWith('Delegate.class')}
-	}
 }
 
 task check {
